# oi.client.rgbd.libfreenect2

./: CMakeLists.txt  README.md
cmake_modules/: FindASIO.cmake  FindFreenect2.cmake
headers/: LibFreenect2Streamer.hpp  RGBDStreamer.hpp  RecordState.hpp  UDPBase.hpp  UDPConnector.hpp
include/: LibFreenect2DeviceInterface.hpp  UDPBase.hpp  UDPConnector.hpp
src/: LibFreenect2DeviceInterface.cpp  LibFreenect2Streamer.cpp  OIClientLibfreenect2.cpp  RGBDStreamer.cpp  RecordState.cpp  UDPBase.cpp  UDPConnector.cpp  freenectStreamer.cpp  main.cpp  oi.plugin.network.cpp
